--- a/pages/bio-page.html
+++ b/pages/bio-page.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Alyssa Holbert's Profile</title>
+
+    <link rel="stylesheet" href="../styles/main-styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" 
+      rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" 
+      crossorigin="anonymous">
 </head>
-<body>
-    <h1>Profile</h1>
-    <p>This page will eventually host my profile.</p>
+<body id="bio-body">
+
+    <div class="container-fluid">
+
+        <div class="container text-center" id="header">
+        <h1 id="profile-header">Profile</h1>
+        </div>
+    
+
+        <p>This page will eventually host my profile.</p>
+
+        <p id="footer"> 
+            <a href="home-cardflip.html">
+                < go back 
+            </a>
+        </p>
+
+      
+
+
 </body>
 </html>
