added contact card styling

--- a/pages/bio-page.html
+++ b/pages/bio-page.html
@@ -23,6 +23,10 @@
 
         <p>This page will eventually host my profile.</p>
 
+        <p>
+            <a href="contact-card">contact me!</a>
+        </p>
+
         <p id="footer"> 
             <a href="home-cardflip.html">
                 < go back 
